# kb-ai-rag

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  PHASE_1_2_REVIEW.md  PROJECT_PLAN.md  PROJECT_PLAN_SUMMARY.md  README.md
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/data/knowledge/: email_configuration.txt  laptop_provisioning.txt  mfa_setup.txt  network_drive_mapping.txt  password_reset.txt  remote_desktop.txt  software_request.txt  vpn_setup.txt
backend/scripts/: run_eval.py  run_eval_agentic.py
backend/src/: config.py  exceptions.py  logging_config.py
backend/src/api/: deps.py  main.py  schemas.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: collections.py  eval.py  health.py  ingest.py  query.py  query_agentic.py
backend/src/api/schemas/: __init__.py  agentic.py
backend/src/evaluation/: __init__.py  golden_dataset.json  ragas_eval.py  runner.py
backend/src/generation/: chain.py  prompts.py
backend/src/graph/: __init__.py  builder.py  edges.py  node_names.py  state.py
backend/src/graph/nodes/: critic.py  generator.py  grader.py  retriever.py  router.py
backend/src/ingestion/: bm25_store.py  embedder.py  models.py  pipeline.py  sentence_window_splitter.py  splitter.py  splitter_factory.py  vector_store.py
backend/src/ingestion/loaders/: base.py  local_loader.py
backend/src/retrieval/: __init__.py  dense.py  hybrid.py  models.py  reranker.py  retriever.py  sparse.py
backend/src/schemas/: generation.py
backend/tests/: conftest.py
backend/tests/unit/: test_api_collections.py  test_api_eval.py  test_api_ingest.py  test_api_query.py  test_api_schemas.py  test_auth_middleware.py  test_config.py  test_exceptions.py  test_generation_chain.py  test_health_route.py  test_ingestion_bm25.py  test_ingestion_embedder.py  test_ingestion_local_loader.py  test_ingestion_models.py  test_ingestion_pipeline.py  test_ingestion_splitter.py  test_ingestion_vector_store.py  test_logging_config.py  test_main.py  test_retrieval_dense.py  test_retrieval_hybrid.py  test_retrieval_models.py  test_retrieval_reranker.py  test_retrieval_retriever.py  test_retrieval_sparse.py  test_sentence_window_splitter.py  test_splitter_factory.py
backend/tests/unit/api/: test_query_agentic.py
backend/tests/unit/evaluation/: test_ragas_eval.py  test_runner.py
backend/tests/unit/graph/: test_builder.py  test_critic.py  test_edges.py  test_generator.py  test_grader.py  test_graph_integration.py  test_retriever.py  test_router.py  test_state.py
data/: eval_agentic_baseline.json  eval_agentic_eval_result.json
docs/: deployment-guide.md  evaluation_agentic_results.md  evaluation_results.md  stack-upgrade-proposal.md  test-guide.md  user-guide.md
(+134 files in other folders)
